<resources>
    <string name="app_name">NewsApp</string>
    <string name="title">Title</string>
    <string name="source_name">Source name</string>
    <string name="source_description">Source description</string>
    <string name="source_country">Source country</string>
    <string name="category">Category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="source">Source</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change theme</string>
    <string name="saved">Saved</string>
    <string name="category_first">#000000</string>
    <string name="category_second">#FFFFFF</string>
    <string name="dark_mode">Dark mode</string>
    <string name="profile">Profile</string>
    <string name="delete_all_news">Delete all news</string>
    <string name="save">Save</string>
    <string name="are_you_sure">Are you sure, that you want to delete all saved news?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="newsapp">NewsApp</string>
    <string name="by_glacierpower">by GlacierPower</string>
    <string name="version_1_0_0">version 1.0.0</string>
    <string name="the_usa">The USA</string>
    <string name="change_country">Change Country</string>
    <string name="saved_news">Saved news</string>
    <string name="swipe_down_to_refresh">Swipe down to refresh</string>
    <string name="favorite">Favorite</string>
    <string name="delete_from_favorite">News was deleted from Favorite</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree_to_the_terms">I agree to the terms</string>
    <string name="send_password_reset_email">Submit</string>
    <string name="reset_password">Reset your password</string>
    <string name="check_email">Check your email</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="reg_succ">Registration was successful, please login</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password_wrong">Password must be greater than 6 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="confirm_pass_wrong">Confirm password does not match</string>
    <string name="delete_news">Delete news</string>
    <string name="are_you_sure_delete_news">Are you sure, that you want to delete this news?</string>
    <string name="share_news">Share news</string>
    <string name="add_to_favorite">Favorite</string>
    <string name="cancel">Cancel</string>
    <string name="favorite_alert_message">Only registered users can add news to favorite! Would you like to sign in now?</string>
    <string name="text_plain">text/plain</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="tools">Tools</string>
    <string name="welcome">Welcome!</string>
    <string name="home">Home</string>

</resources>