<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="source"
            type="com.newsapp.data.model.SourcesNews" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_height="150dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sourceImage"

            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/source_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:ellipsize="end"
            android:maxLines="1"

            android:hint="@string/source_name"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/sourceImage"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:hint="@string/source_description"
            android:maxLines="3"

            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/sourceImage"
            app:layout_constraintTop_toBottomOf="@+id/source_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/category_source"
            android:layout_width="169dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:hint="@string/source_country"
            android:maxLines="1"

            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/sourceImage"
            app:layout_constraintTop_toBottomOf="@+id/description_source" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>