<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forgotPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textForgot"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:singleLine="true"
            android:text="@string/reset_password"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/enterEmail"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:singleLine="true"
            android:text="@string/please_enter_your_email_address"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textForgot" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmailForgot"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="85dp"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/email"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_email"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/error_color"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/error_color"
            app:hintTextColor="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailForgot"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColorHint="@color/hint_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forgot"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/send_password_reset_email"
            android:textColor="@color/teal_700"
            app:cornerRadius="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmailForgot" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loadingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@color/black"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progressAnimationView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/load" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>